bugfix: graph will not overflow the container when modal is opened

--- a/styles/components/GraphView.module.css
+++ b/styles/components/GraphView.module.css
@@ -107,6 +107,7 @@
   box-shadow: 0 8px 32px 0 var(--shadow-color);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .viewNavContainer {
